[FIX] discuss: fixes the size of overlay
Before this commit, in small call views, the overlay of participant
cards was taking too much space and made the UI feel too cluttered
while hiding the camera/screen of participants.

This commit fixes this issue by making the icons proportional to their
containers.

This commit also fixes an improper dynamic background color in dark
mode.

closes odoo/odoo#206761

X-original-commit: 461d541b0d47ab4f729bb54508567c73a0638429

--- a/addons/mail/static/src/discuss/call/common/call_participant_card.scss
+++ b/addons/mail/static/src/discuss/call/common/call_participant_card.scss
@@ -97,8 +97,12 @@
     &.o-proportional-container {
         container-type: inline-size;
         .o-proportional-text {
+            font-size: #{"min(1rem, 40cqw)"};
             &.o-video-text {
                 font-size: 5cqw;
+            }
+            &.o-discuss-CallParticipantCard-overlayBottomName {
+                font-size: #{"min(0.8rem, 40cqw)"};
             }
         }
     }
